--- a/example/koa1/package.json
+++ b/example/koa1/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "koa": "^2.3.0",
-    "koa-router": "^7.2.1"
+    "babel-polyfill": "^6.26.0",
+    "koa": "^1.4.0",
+    "koa-router": "^5.4.2"
   }
 }
