--- a/example/koa1/package.json
+++ b/example/koa1/package.json
@@ -13,6 +13,8 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.26.0",
     "koa": "^1.4.0",
+    "koa-body-parser": "^1.1.2",
+    "koa-body-parsers": "^3.1.0",
     "koa-router": "^5.4.2"
   }
 }
