--- a/example/express/package.json
+++ b/example/express/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "body-parser": "^1.18.1",
     "express": "^4.15.4"
   }
 }
