--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "config": "^1.26.2",
+    "joi": "^11.0.3",
     "joi-to-json-schema": "^3.0.0",
     "lodash": "^4.17.4",
     "require-dir": "^0.3.2"
